# evolver-ng

./: .gitignore  CITATION.cff  Dockerfile  README.md  evolver.yml  pyproject.toml  rpi_setup.md  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  dist.yml
.run/: evolver-debug-config.run.xml
calibration_files/: default_od135_calibration_config.yml  default_od90_calibration_config.yml  default_temperature_calibration_config.yml
docs/source/: api.rst  concepts.rst  conf.py  index.rst  installation.rst  quick-start.rst  usage.rst
docs/source/development/: calibrators.rst  config.rst  controllers.rst  hardware.rst  index.rst  installation.rst
evolver/: __init__.py  base.py  device.py  history.py  logutils.py  serial.py  settings.py  types.py  util.py  vial.py
evolver/adapter/: __init__.py  demo.py  interface.py
evolver/app/: exceptions.py  hardware.py  html_routes.py  main.py  models.py
evolver/app/routers/: dev.py  experiment.py  hardware.py
evolver/app/tests/: conftest.py  evolver.yml  test_app.py  test_calibration.py  test_dev.py  test_experiment.py  test_hardware.py  test_html.py  test_models.py
evolver/calibration/: action.py  actions.py  demo.py  interface.py  procedure.py  state.py  steps.py
evolver/calibration/standard/: curve_fit.py  linear.py  polyfit.py  sigmoid.py
evolver/calibration/standard/actions/: temperature.py
evolver/calibration/standard/calibrators/: pump.py  temperature.py
evolver/calibration/standard/tests/: test_fitting.py
evolver/connection/: interface.py
evolver/controller/: demo.py  interface.py
evolver/controller/standard/: __init__.py  chemostat.py
evolver/controller/standard/tests/: test_chemostat.py
evolver/hardware/: __init__.py  demo.py  interface.py  test_utils.py
evolver/hardware/standard/: base.py  led.py  od_sensor.py  pump.py  stir.py  temperature.py
evolver/hardware/standard/tests/: test_od_sensor.py  test_pump_calibrator.py  test_standard.py  test_temperature_calibrator.py
evolver/history/: demo.py  interface.py  standard.py
evolver/history/tests/: test_history.py
evolver/sensor_calibration/: README.md  calibration_data.py  calibration_procedure.py  calibration_step.py  linear_fit.py  sensor_manager.py
evolver/sensor_calibration/example_api/: calibration_procedure_api.py
evolver/sensor_calibration/example_calibration_procedures/: optical_density_sensor_calibration.py  temperature_sensor_calibration.py
evolver/test/: test_device.py
evolver/tests/: conftest.py  test_adapter.py  test_base.py  test_calibrator.py  test_controller.py  test_device.py  test_hardware_interface.py  test_history.py  test_logging.py  test_procedure_performance.py  test_serial.py  test_vial_view.py
githooks/: pre-push
requirements/: build.txt  docs.txt  prd.txt  test.txt
scripts/: gen_default_cali_files.py  generate_openapi.py
tests/: test_util.py
