[project]
name = "evolver"
dynamic = ["version"]
authors = [
    {name = "Scientifc Software Engineering Center at JHU", email = "ssec@jhu.edu"},
]
description = ""
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.11"
dependencies = [
    "fastapi[all]",
    "pydantic",
    "pyserial",
    "uvicorn"
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7",
    "build",
    "httpx",
    "pytest",
    "pytest-cov",
    "ruff",
    "setuptools>=61.2",
    "setuptools_scm[toml]>=8.0",
    "tox"
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx_book_theme",
    "sphinx-automodapi",
    "sphinx-issues",
    "nbsphinx"
]

[project.urls]
homepage = "https://github.com/ssec-jhu/evolver-ng"
documentation = "https://github.com/ssec-jhu/evolver-ng"
repository = "https://github.com/ssec-jhu/evolver-ng"

[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["evolver"]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]
write_to = "evolver/_version.py"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "docs",
    "node_modules",
    "venv",
    "_version.py"
]

lint.ignore = [
]

target-version = "py311"
